[package]
name = "kayle_cli"
version = "0.0.3"
edition = "2021"
description = "The kayle CLI for web accessibility auditing"
repository = "https://github.com/a11ywatch/kayle"
categories = ["accessibility"]
authors = ["j-mendez"]
license = "MIT"

[dependencies]
clap = { version = "4.5.1", features = ["derive"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"