[package]
name = "kayle_innate"
version = "0.0.21"
authors = ["j-mendez"]
edition = "2018"
license = "MIT"
description = "Incredibly fast and precise universal web accessibility evaluator for puppeteer or playwright."
repository = "https://github.com/a11ywatch/kayle"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "accessibility"]
accessibility = ["cssparser"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
url = "2.4.0"
lazy_static = "1.4.0"
case_insensitive_string = "0.1.0"
scraper = { version = "0.17.1" }
getrandom = { version = "0.2", features = ["js"] }
cssparser = { version = "0.33.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
