[package]
name = "victor_tree"
version = "0.0.7"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT OR Apache-2.0"
description = "Victor makes vectors"
repository = "https://github.com/SimonSapin/victor"
edition = "2018"

[lib]
doctest = false

[dependencies]
atomic_refcell = "0.1"
cssparser = { workspace = true }
dtoa = "0.4"
euclid = "0.19"
html5ever = { workspace = true }
itoa = "0.4"
lazy_static = { workspace = true }
lock_api = "0.1"
num-traits = "0.2"
rayon = "1"
rayon_croissant = "0.1.1"
scraper_forky = { version = "0.17.1", features = ["main"], default-features = false, path = "../../kayle_scraper" }
selectors = { workspace = true }
smallbitvec = "2.4"
smallvec = { workspace = true }
victor-tree-internal-proc-macros = {path = "../proc-macros", version = "0.0.1"}
xi-unicode = "0.1"
xml-rs = {package = "xml-rs", version = "0.8"}
